# seismic-mcp

./: .gitignore  HANDOFF.md  README.md  pyproject.toml  server.json  server.py  smoke_test.py  web.py
data/: agency_metadata.json  region_authorities.json
src/: authorities.py  cache.py  matching.py  prime_selection.py  reconcile.py  schemas.py
src/adapters/: __init__.py  afad.py  base.py  fdsn.py  imo.py  jma.py
src/tools/: compare_sources.py  find_discrepancies.py  find_events.py  get_agency_info.py  get_event.py  list_recent_by_agency.py
static/: index.html
tests/: conftest.py  manual_stdio_probe.py  test_authorities.py  test_cache.py  test_fdsn_adapter.py  test_matching.py  test_parsers.py  test_prime_and_reconcile.py
