[project]
name = "seismic-mcp"
version = "0.1.0"
description = "Model Context Protocol server unifying real-time and historical earthquake data from multiple global seismic agencies (USGS, EMSC, JMA, INGV, GeoNet, AFAD, ...)."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "matt" }]
license = { text = "MIT" }
keywords = [
    "mcp",
    "model-context-protocol",
    "earthquake",
    "earthquakes",
    "seismology",
    "seismic",
    "usgs",
    "emsc",
    "fdsn",
    "geophysics",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "fastmcp>=3.0",
    "httpx[http2]>=0.27",
    "pydantic>=2.7",
    "cachetools>=5.3",
    "fastapi>=0.115",
    "uvicorn>=0.30",
]

[project.scripts]
seismic-mcp = "server:main"

[project.urls]
Homepage = "https://github.com/hoon1983/seismic-mcp"
Repository = "https://github.com/hoon1983/seismic-mcp"
Issues = "https://github.com/hoon1983/seismic-mcp/issues"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# The MCP entry point is `server:main`, and the reconciliation code loads
# data/*.json as a sibling of src/ (Path(__file__).parent.parent / "data").
# Ship server.py as a top-level module and data/ alongside src/ so both the
# console script and the data-file lookups resolve after a clean install.
# web.py / static/ are intentionally excluded — the HTTP frontend is a dev
# tool, not part of the MCP deliverable.
packages = ["src"]

[tool.hatch.build.targets.wheel.force-include]
"server.py" = "server.py"
"data" = "data"

[tool.hatch.build.targets.sdist]
include = ["server.py", "web.py", "src", "data", "static", "README.md", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]
